# infrared

./: ..rej  .ansible-lint  .gitignore  .gitmodules  .gitreview  .plugins.ini  .pre-commit-config.yaml  .travis.yml  .yamllint  Makefile  README  README.md  README.rst  USE-GERRITHUB-FOR-CONTRIBUTION  another_test  ansible-template.cfg  ansible.cfg  ansible.cfg.example  ansible.dumpedvars.storage.all  ansible.ssh.config  cleanup.yml  create_gitlab_repo.sh  gen-release-notes.sh  groups  hosts  hosts-installer  hosts-prov  infrared-compose.yaml  infrared.cfg  infrared.cfg.example  install.script  install.yml  interop.py  inventory  ir-run-cmd.txt  ir_master_used_commit.txt  kcli.cfg.example  myrun  oc.yml  overcloud-install.yml  (+32 more)
.circleci/: config.yml
.githooks/: README.TXT  pre-push
args/: patching_args.yml
cli/: __init__.py  app.py  ci.py  clg.py  conf.py  exceptions.py  execute.py  install.py  jenkins.test  logger.py  main.py  ngclg.py  options.py  parse.py  profile_manager.py  provision.py  spec.py  utils.py  workarounds.py  workspace.py  yamls.py
cli/scripts/: __init__.py  archive.py  profile.py
docs/: Makefile  requirements.txt
docs/examples/: ansible.cfg  main.yml  plugin.spec  v1_syntax.sh  v2_syntax.sh
docs/source/: advance_features.rst  advanced.rst  baremetal.rst  beaker.rst  bootstrap.rst  cdn_cookbook.rst  changes.rst  cloud-config.rst  collect-logs.rst  composable_roles.rst  conf.py  configuration.rst  contacts.rst  container_sanity.rst  contribute.rst  contributions.rst  contributors.rst  control_placement.rst  controller_replacement.rst  current_temporary_hacks.rst  execute.rst  foreman.rst  gabbi_tester.rst  hybrid_deployment.rst  hypervisor.rst  index.rst  installer.rst  interactive_ssh.rst  introduction.rst  list_builds.rst  missing.rst  openstack_provisioner.rst  ospdui_tester.rst  ovb.rst  plugins.rst  plugins_guide.rst  profile.rst  pytest_runner.rst  quickstart.rst  rdo.rst  (+23 more)
environments/panther01.qa.lab.tlv.redhat.com_env/: ansible.ssh.config.panther01.qa.lab.tlv.redhat.com  id_rsa_hypervisor_panther01.qa.lab.tlv.redhat.com  id_rsa_hypervisor_panther01.qa.lab.tlv.redhat.com.pub  id_rsa_overcloud_panther01.qa.lab.tlv.redhat.com  inventory_panther01.qa.lab.tlv.redhat.com
environments/panther02.qa.lab.tlv.redhat.com_env/: ansible.ssh.config.panther02.qa.lab.tlv.redhat.com  id_rsa_hypervisor_panther02.qa.lab.tlv.redhat.com  id_rsa_hypervisor_panther02.qa.lab.tlv.redhat.com.pub  id_rsa_undercloud_panther02.qa.lab.tlv.redhat.com  inventory_panther02.qa.lab.tlv.redhat.com
environments/panther08.qa.lab.tlv.redhat.com_env/: ansible.ssh.config.panther08.qa.lab.tlv.redhat.com  inventory_panther08.qa.lab.tlv.redhat.com  (+3 more)
infrared/: __init__.py  __main__.py  api.py  bash_completers.py  completers.py  main.py  test.yml
kcli/: conf.py  execute.py  logger.py  main.py  options.py  parse.py
playbooks/: build-oc-images.yml  cleanup.yaml  cleanup.yml  collect-logs.yml  collect_logs.yml  infrared-ux.yml  install.yml  patching_vars.yml  provision.yaml  provision.yml  test.yml
plugins/: registry.yaml  settings.yml
settings/: SPEC.yml  base.spec
templates/: ansible.ssh.config.j2  inventory.j2
test-gerrit/: README.rst
tests/: conftest.py  constants.py  specmock.py  test_cli_install.py  test_complex_types.py  test_conf.py  test_core_config.py  test_execute.py  test_filesize.py  test_filters.py  test_help_screen.py  test_interactive_ssh.py  test_junit_xml.py  test_plugins.py  test_profile.py  test_provision.py  test_spec.py  test_topology_type.py  test_utils.py  test_workspace.py  test_yaml.py  test_yaml_types.py
(+2995 files in other folders)
