[metadata]
name = infrared
summary = InfraRed - easy-to-use plugin-based CLI for Ansible based projects
description-file =
    README.rst
author = ''
author-email = ''
home-page = https://github.com/redhat-openstack/infrared
classifier =
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Software Development :: Testing
  Topic :: Utilities

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[files]
packages =
    infrared
data_files =
    roleslib = roleslib/*

[entry_points]
console_scripts =
    infrared = infrared.main:main
    ir = infrared.main:main
    
[flake8]
# E125 is a won't fix until https://github.com/jcrocholl/pep8/issues/126 is resolved.  For further detail see https://review.openstack.org/#/c/36788/
# E123 skipped because it is ignored by default in the default pep8
# E129 skipped because it is too limiting when combined with other rules
# H404,H405,H101,H233,H306,H401,H301,H236 Skipped until they gets fixed
ignore = E125,E123,E129,H404,H405,H101,H233,H306,H401,H301,H236,D
show-source = True
exclude = .git,.venv,.tox,dist,docs,*egg,library,plugins/octario,plugins/gabbi
