[metadata]
name = infrared-V3
summary = InfraRed - easy-to-use plugin-based CLI for Ansible based projects
description-file =
    README.rst
author = Red Hat OpenStack Infrastructure Team
author-email = rhos-infrared-dev@redhat.com
home-page = https://github.com/redhat-openstack/infrared
classifier =
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Software Development :: Testing
  Topic :: Utilities

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[files]
packages =
    infrared
data_files =
    common = common/*

[entry_points]
console_scripts =
    infrared = infrared.main:main
    ir = infrared.main:main

[options.extras_require]
basic =
    infrared-tripleo-overcloud
    infrared-tripleo-undercloud
    infrared-virsh
    infrared-collect-logs
all =
    infrared-beaker
    infrared-collect-logs
    infrared-foreman
    infrared-list-builds
    infrared-openstack
    infrared-ospdui
    infrared-packstack
    infrared-pytest-runner
    infrared-rally
    infrared-tempest
    infrared-tripleo-overcloud
    infrared-tripleo-undercloud
    infrared-virsh

