[metadata]
name = infrared
summary = InfraRed - easy-to-use plugin-based CLI for Ansible based projects
description-file =
    README.rst
author = ''
author-email = ''
home-page = https://github.com/redhat-openstack/infrared
classifier =
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Software Development :: Testing
  Topic :: Utilities

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[files]
packages =
    infrared
data_files =
    common = common/*

[entry_points]
console_scripts =
    infrared = infrared.main:main
    ir = infrared.main:main
